--- a/athletics.html
+++ b/athletics.html
@@ -330,6 +330,23 @@
       font-weight: 500;
       display: none;
     }
+
+    .btn {
+      padding: 10px 20px;
+      border-radius: 8px;
+      font-weight: 600;
+      cursor: pointer;
+      transition: var(--transition);
+      border: none;
+    }
+        .btn-primary {
+      background: gray;
+      color: white;
+    }
+    
+    .btn-primary:hover {
+      background: rgb(51, 51, 51);
+    }
     
     .success {
       background-color: rgba(16, 185, 129, 0.15);
@@ -448,10 +465,9 @@
         <div class="brand-text">Sports Hub</div>
       </div>
       <div>
-        <a href="home.html" class="btn btn-secondary" style="padding: 10px 20px; background: grey; color: white; border-radius: 8px; text-decoration: none;">
-          <i class="fas fa-arrow-left"></i> Back to Home
+        <a href="home.html" class="btn btn-primary" style="text-decoration: none;">
+          <i class="fas fa-home"></i>
         </a>
-      </div>
     </div>
   </header>
   
@@ -753,5 +769,3 @@
   </script>
 </body>
 </html>
-
-
