--- a/contact.html
+++ b/contact.html
@@ -128,7 +128,7 @@
     .dropdown {
       display: none;
       position: absolute;
-      background: linear-gradient(135deg, var(--primary), var(--primary-dark));
+      background: linear-gradient(rgb(91, 91, 91), black);
       list-style: none;
       padding: 0;
       top: 100%;
@@ -565,7 +565,7 @@
       <a href="home.html">
         <a href="home.html"><img src="Images/images.jpeg" alt="WSU Logo" class="logo-img"></a>
       </a>
-      <div class="brand-text">Sports Hub</div>
+      <div class="brand-text">WSU Sports Hub</div>
       <button class="hamburger" id="hamburger">
         <span></span>
         <span></span>
@@ -906,5 +906,3 @@
   </script>
 </body>
 </html>
-
-
