--- a/home.html
+++ b/home.html
@@ -122,7 +122,7 @@
       position: absolute;
       top: 100%;
       left: 0;
-      background-color: rgba(48, 45, 45, 0.307);
+      background: linear-gradient(rgb(91, 91, 91), black);
       box-shadow: var(--shadow);
       border-radius: 5px;
       min-width: 200px;
@@ -555,7 +555,7 @@
         top: 100%;
         left: 0;
         width: 100%;
-        background:  rgba(48, 45, 45, 0.307);
+        background: linear-gradient(rgb(91, 91, 91), black);
         flex-direction: column;
         box-shadow: var(--shadow);
         padding: 20px;
