--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- 
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -186,9 +186,9 @@
 </html>
 
 
- -->
 
-<!DOCTYPE html>
+
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8" />
@@ -424,3 +424,5 @@
   </main>
 </body>
 </html>
+
+ -->
