--- a/volleyball.html
+++ b/volleyball.html
@@ -776,20 +776,21 @@
   </div>
 <br>
   <section class="registration-section container">
-    <div class="form-card">
-  <h2 class="form-title"><i class="fas fa-basketball-ball"></i> About Our Netball Program</h2>
-  <p>The WSU Netball Team is a competitive and dynamic squad that proudly represents the university in regional and national tournaments. Our program offers:</p>
-  <ul style="margin: 20px 0; padding-left: 30px;">
-    <li>Expert coaching from experienced netball professionals</li>
-    <li>Specialized training for all positions including shooters, mid-court, and defenders</li>
-    <li>Regular participation in inter-university leagues and championships</li>
-    <li>Access to top-quality indoor and outdoor netball courts</li>
-    <li>Strength, agility, and endurance training programs</li>
-    <li>Academic and personal development support for student-athletes</li>
-  </ul>
-  <p>For more information, contact our Netball Coordinator at <strong>netball@wsu.ac.za</strong> or call <strong>+27 47 502 2846</strong>.</p>
-</div>
+  <div class="form-card">
+    <h2 class="form-title"><i class="fas fa-volleyball-ball"></i> About Our Volleyball Program</h2>
+    <p>The WSU Volleyball Team is a competitive and energetic squad that proudly represents the university in regional and national tournaments. Our program offers:</p>
+    <ul style="margin: 20px 0; padding-left: 30px;">
+      <li>Expert coaching from experienced volleyball professionals</li>
+      <li>Specialized training for all positions including setters, spikers, liberos, and blockers</li>
+      <li>Regular participation in inter-university leagues and championships</li>
+      <li>Access to high-quality indoor and outdoor volleyball courts</li>
+      <li>Strength, agility, and endurance training programs</li>
+      <li>Academic and personal development support for student-athletes</li>
+    </ul>
+    <p>For more information, contact our Volleyball Coordinator at <strong>volleyball@wsu.ac.za</strong> or call <strong>+27 47 502 2846</strong>.</p>
+  </div>
 </section>
+
 
 
   <!-- Scroll-to-Top Button -->
@@ -920,3 +921,4 @@
   </script>
 </body>
 </html>
+
