--- a/cricket.html
+++ b/cricket.html
@@ -782,20 +782,21 @@
   </div>
 <br>
   <section class="registration-section container">
-    <div class="form-card">
-  <h2 class="form-title"><i class="fas fa-basketball-ball"></i> About Our Netball Program</h2>
-  <p>The WSU Netball Team is a competitive and dynamic squad that proudly represents the university in regional and national tournaments. Our program offers:</p>
-  <ul style="margin: 20px 0; padding-left: 30px;">
-    <li>Expert coaching from experienced netball professionals</li>
-    <li>Specialized training for all positions including shooters, mid-court, and defenders</li>
-    <li>Regular participation in inter-university leagues and championships</li>
-    <li>Access to top-quality indoor and outdoor netball courts</li>
-    <li>Strength, agility, and endurance training programs</li>
-    <li>Academic and personal development support for student-athletes</li>
-  </ul>
-  <p>For more information, contact our Netball Coordinator at <strong>netball@wsu.ac.za</strong> or call <strong>+27 47 502 2846</strong>.</p>
-</div>
+  <div class="form-card">
+    <h2 class="form-title"><i class="fas fa-baseball-ball"></i> About Our Cricket Program</h2>
+    <p>The WSU Cricket Team is a competitive and skillful squad that proudly represents the university in regional and national tournaments. Our program offers:</p>
+    <ul style="margin: 20px 0; padding-left: 30px;">
+      <li>Expert coaching from experienced cricket professionals</li>
+      <li>Specialized training for all roles including batsmen, bowlers, wicket-keepers, and all-rounders</li>
+      <li>Regular participation in inter-university leagues and championships</li>
+      <li>Access to professional-quality cricket pitches and training facilities</li>
+      <li>Strength, agility, and endurance training programs</li>
+      <li>Academic and personal development support for student-athletes</li>
+    </ul>
+    <p>For more information, contact our Cricket Coordinator at <strong>cricket@wsu.ac.za</strong> or call <strong>+27 47 502 2846</strong>.</p>
+  </div>
 </section>
+
 
 
   <!-- Scroll-to-Top Button -->
@@ -927,3 +928,4 @@
   </script>
 </body>
 </html>
+
