--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
       </p>
 
       <div class="eta" role="status" aria-live="polite">
-        The site will be <strong>online by 17:00 on 09/08/2025</strong>.
+        The site will be <strong>online Whenever🤦‍♂️</strong>.
       </div>
 
       <p class="note">
@@ -410,20 +410,21 @@
       </div>
 
       <p class="small">
-        For urgent enquiries call: <strong>+27 47 502 2846</strong>
+        For urgent enquiries call: <strong>+27 731962145</strong>
       </p>
     </section>
 
     <aside class="card right" aria-label="Coming soon badge">
       <div class="badge">
         <h2>Coming Soon</h2>
-        <div class="time">17:00 — 09/08/2025</div>
+        <div class="time">I don't wanna lie I Don't Know</div>
         <div class="subtle">Africa/Johannesburg time</div>
       </div>
     </aside>
   </main>
 </body>
 </html>
+
 
 
 
