--- a/index.html
+++ b/index.html
@@ -417,13 +417,14 @@
     <aside class="card right" aria-label="Coming soon badge">
       <div class="badge">
         <h2>Coming Soon</h2>
-        <div class="time">I don't wanna lie I Don't Know</div>
+        <div class="time">I don't wanna lie I Don't Know when</div>
         <div class="subtle">Africa/Johannesburg time</div>
       </div>
     </aside>
   </main>
 </body>
 </html>
+
 
 
 
