--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- 
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -184,11 +184,11 @@
   </script>
 </body>
 </html>
- -->
 
 
 
-<!DOCTYPE html>
+
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8" />
@@ -429,3 +429,5 @@
 
 
 
+
+ -->
