--- a/login.html
+++ b/login.html
@@ -239,6 +239,28 @@
         font-size: 1.75rem;
       }
     }
+@media (max-width: 480px) {
+  .modern-btn,
+  .link-btn {
+    font-size: 0.95rem;        
+    padding: 0.85rem;          
+    border-radius: 10px;       
+    width: 100%;              
+  }
+
+  .modern-btn {
+    margin-top: 1rem;
+  }
+
+  .link-btn {
+    margin-bottom: 1.2rem;     
+  }
+
+  .btn-text {
+    font-size: 1rem;          
+  }
+}
+
   </style>
 </head>
 <body>
@@ -370,3 +392,4 @@
   </script>
 </body>
 </html>
+
