--- a/contact.html
+++ b/contact.html
@@ -587,7 +587,7 @@
         </ul>
       </li>
       <li><a href="contact.html">Contact</a></li>
-      <li><a href="login.html" id="logoutLink">Logout</a></li>
+      <li><a href="index.html" id="logoutLink" style ="color: red;">Logout</a></li>
     </ul> 
   </nav>
 
@@ -906,4 +906,5 @@
   </script>
 </body>
 </html>
+
 
