--- a/home.html
+++ b/home.html
@@ -688,6 +688,14 @@
             <li><a href="volleyball.html"><i class="fas fa-volleyball-ball"></i> Volleyball</a></li>
           </ul>
         </li>
+        <li id="dropdownWrapper">
+          <a href="#" id="dropdownLink" class="dropdown-trigger"><i class="fas fa-plus"></i> Cultural Activities</a>
+          <ul class="dropdown" id="moreDropdown">
+            <li><a href="drama.html"><i class="fas fa-theater-masks"></i> Drama</a></li>
+            <li><a href="choir.html"><i class="fas fa-microphone"></i></i> Choir</a></li>
+            <li><a href="debate.html"><i class="fas fa-comments"></i> Debate</a></li>
+          </ul>
+        </li>
         <li><a href="contact.html"><i class="fas fa-envelope"></i> Contact</a></li>
         <li><a href="index.html" id="logoutLink" class="logout-link"><i class="fas fa-sign-out-alt"></i> Logout</a></li>
       </ul>
