--- a/contact.html
+++ b/contact.html
@@ -565,7 +565,7 @@
       <a href="home.html">
         <a href="home.html"><img src="Images/images.jpeg" alt="WSU Logo" class="logo-img"></a>
       </a>
-      <div class="brand-text">Sports Hub</div>
+      <div class="brand-text">WSU Sports Hub</div>
       <button class="hamburger" id="hamburger">
         <span></span>
         <span></span>
@@ -584,10 +584,14 @@
           <li><a href="volleyball.html">Volleyball</a></li>
           <li><a href="cricket.html">Cricket</a></li>
           <li><a href="netball.html">Netball</a></li>
+          <li><a href="drama.html"><i class="fas fa-theater-masks"></i> Drama</a></li>
+            <li><a href="choir.html"><i class="fas fa-microphone"></i></i> Choir</a></li>
+            <li><a href="debate.html"><i class="fas fa-comments"></i> Debate</a></li>
         </ul>
       </li>
+      
       <li><a href="contact.html">Contact</a></li>
-      <li><a href="index.html" id="logoutLink" style ="color: red;">Logout</a></li>
+      <li><a href="login.html" id="logoutLink">Logout</a></li>
     </ul> 
   </nav>
 
@@ -906,5 +910,3 @@
   </script>
 </body>
 </html>
-
-
