--- a/contact.html
+++ b/contact.html
@@ -565,7 +565,7 @@
       <a href="home.html">
         <a href="home.html"><img src="Images/images.jpeg" alt="WSU Logo" class="logo-img"></a>
       </a>
-      <div class="brand-text">WSU Sports Hub</div>
+      <div class="brand-text">Sports Hub</div>
       <button class="hamburger" id="hamburger">
         <span></span>
         <span></span>
@@ -910,3 +910,4 @@
   </script>
 </body>
 </html>
+
