--- a/contact.html
+++ b/contact.html
@@ -584,9 +584,6 @@
           <li><a href="volleyball.html">Volleyball</a></li>
           <li><a href="cricket.html">Cricket</a></li>
           <li><a href="netball.html">Netball</a></li>
-          <li><a href="drama.html"><i class="fas fa-theater-masks"></i> Drama</a></li>
-            <li><a href="choir.html"><i class="fas fa-microphone"></i></i> Choir</a></li>
-            <li><a href="debate.html"><i class="fas fa-comments"></i> Debate</a></li>
         </ul>
       </li>
       
@@ -741,7 +738,7 @@
           <div class="department-content">
             <div class="department-contact">
               <i class="fas fa-user"></i>
-              <div>Coach: Evans Mkhari</div>
+              <div>Coach: Evens Mkhari</div>
             </div>
             <div class="department-contact">
               <i class="fas fa-envelope"></i>
@@ -834,7 +831,7 @@
       <p class="footer-text">Nelson Mandela Drive, Mthatha, Eastern Cape, South Africa</p>
       
       <div class="social-links">
-        <a href="#" class="social-link"><i class="fab fa-facebook-f"></i></a>
+        <a href="https://www.facebook.com/OfficialWSU?mibextid=ZbWKwL" class="social-link"><i class="fab fa-facebook-f"></i></a>
         <a href="#" class="social-link"><i class="fab fa-twitter"></i></a>
         <a href="#" class="social-link"><i class="fab fa-instagram"></i></a>
         <a href="#" class="social-link"><i class="fab fa-linkedin-in"></i></a>
@@ -910,4 +907,5 @@
   </script>
 </body>
 </html>
+
 
