--- a/contact.html
+++ b/contact.html
@@ -832,10 +832,10 @@
       
       <div class="social-links">
         <a href="https://www.facebook.com/OfficialWSU?mibextid=ZbWKwL" class="social-link"><i class="fab fa-facebook-f"></i></a>
-        <a href="#" class="social-link"><i class="fab fa-twitter"></i></a>
-        <a href="#" class="social-link"><i class="fab fa-instagram"></i></a>
-        <a href="#" class="social-link"><i class="fab fa-linkedin-in"></i></a>
-        <a href="#" class="social-link"><i class="fab fa-youtube"></i></a>
+        <a href="https://x.com/WalterSisuluUni?s=09"><i class="fab fa-twitter"></i></a>
+        <a href="https://www.instagram.com/officialwsu?igsh=MThqa3UyMW43NDlzdg==" class="social-link"><i class="fab fa-instagram"></i></a>
+        <a href="https://www.linkedin.com/school/wsu-walter-sisulu-university/" class="social-link"><i class="fab fa-linkedin-in"></i></a>
+        <a href="http://www.youtube.com/@TheOfficialWSU" class="social-link"><i class="fab fa-youtube"></i></a>
       </div>
       
       <p class="footer-copyright">&copy; 2025 Walter Sisulu University Sports Hub. All Rights Reserved.</p>
@@ -907,5 +907,6 @@
   </script>
 </body>
 </html>
+
 
 
