--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
     
     <div class="role-buttons">
       <button class="role-button" onclick="redirect('user')">
-        <i class="fas fa-user"></i> Login as User
+        <i class="fas fa-user"></i> Login as Student
       </button>
       <button class="role-button" onclick="redirect('admin')">
         <i class="fas fa-user-shield"></i> Login as Administrator
@@ -431,3 +431,4 @@
 
 
  -->
+
