--- a/contact.html
+++ b/contact.html
@@ -588,7 +588,7 @@
       </li>
       
       <li><a href="contact.html">Contact</a></li>
-      <li><a href="login.html" id="logoutLink">Logout</a></li>
+      <li><a href="index.html" id="logoutLink">Logout</a></li>
     </ul> 
   </nav>
 
@@ -933,6 +933,7 @@
   </script>
 </body>
 </html>
+
 
 
 
