--- a/home.html
+++ b/home.html
@@ -690,6 +690,7 @@
         </li>
         
         <li><a href="contact.html"><i class="fas fa-envelope"></i> Contact</a></li>
+        <li><a href="updates.html"><i class="fas fa-bell"></i> Announcements</a></li>
         <li><a href="index.html" id="logoutLink" class="logout-link"><i class="fas fa-sign-out-alt"></i> Logout</a></li>
       </ul>
       
@@ -977,5 +978,6 @@
   </script>
 </body>
 </html>
+
 
 
