--- a/contact.html
+++ b/contact.html
@@ -588,6 +588,7 @@
       </li>
       
       <li><a href="contact.html">Contact</a></li>
+      <li><a href="updates.html"><i class="fas fa-bell"></i> Announcements</a></li>
       <li><a href="index.html" id="logoutLink">Logout</a></li>
     </ul> 
   </nav>
@@ -933,6 +934,7 @@
   </script>
 </body>
 </html>
+
 
 
 
